<resources>
    <string name="app_name">Demo App Chat</string>
    <string name="need_a_new_account">NEED A NEW ACCOUNT</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_out">Log out</string>
    <string name="creat_a_new_account">Creat a New account</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="title_activity_login">LoginActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_users">All Users</string>
    <string name="account_settings">Account Settings</string>
</resources>
